[Style] Fix invalid dom wrapping

--- a/src/styles/detail-view-tile.scss
+++ b/src/styles/detail-view-tile.scss
@@ -39,7 +39,7 @@
       }
 
       &.right {
-        p {
+        .tag-container {
           display: flex;
           font-size: 1em;
           font-weight: 600;
